--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  esc_pos_bluetooth: ^0.2.8
   flutter_bluetooth_basic: ^0.1.5
   image: ^2.1.19
 
