--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bluetooth_basic: ^0.1.5
+  esc_pos_printer: ^4.0.3
   image: ^2.1.19
 
   # The following adds the Cupertino Icons font to your application.
